Updated for max-width screen of 870px

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<div lang="en">
+<html lang="en">
 
 	<head>
 		<meta charset="UTF-8" />
@@ -252,11 +252,11 @@
 							</div>
 						</div>
 					</aside>
-				</div>
+				</html>
 				<!-- End of Job block. -->
 			</section>
 			<section class="skill">
-				<html class="content-wapper">
+				<div class="content-wapper">
 					<h2>Technical Skills</h2>
 					<div class="skill-group"><strong>Front-End: </strong>HTML5| CSS3| Bootstrap | Media Queries |
 						JavaScript| JQuery React | Git
@@ -268,7 +268,7 @@
 					<div class="skill-group"><strong>Database:</strong>MySQL | MongoDB | ORM </div>
 					<div class="skill-group"><strong>Graphic & Others: </strong> Photoshop | Microsoft Office</div>
 					</p>
-					</div.>
+					</div>
 			</section>
 
 			<!-- ******************  EDUCATION & CERTIFICATIONS ****************** -->
