--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 				<div class="content-wapper">
 					<div class="feature-project">
 						<h2>Featured Projects</h2>
-						<p>
+						<p class="selected-project">
 							View selected projects below. All the codes can de found on my
 							<a class="btn" href="https://github.com/aayodipe" target="_blank">Github page</a>.
 						</p>
